developed many components

--- a/src/Dealing.css
+++ b/src/Dealing.css
@@ -222,7 +222,7 @@
 
  
 .ready-container {
-  display: flex;
+  display: flex;  
   align-items: center;
   justify-content: space-between;
   max-width: 1200px;
@@ -293,7 +293,7 @@
   transition: all 0.3s ease;
 }
 .ready-btn:hover {
-  background: #5b0ee6;
+  background: rgba(31, 62, 235, 0.89);
   color: white;
 }
 
